--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,8 @@ body{
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
+
+/*  Ajusta as listas com filmes para subir um pouco aparecendo no final do filmes em destaque */
+.lists{
+  margin-top: -150px;
+}
