--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -23,6 +23,8 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 30px;
+    padding-bottom: 150px;
+    padding-top: 70px;
 }
 
 .featured--name{
