--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -100,3 +100,33 @@
 }
 
 
+/* VERSÃO PARA MOBILE*/
+@media(max-width: 760px){
+    .featured {
+        height: 90vh;
+    }
+
+    .featured--name{
+        font-size: 40px;
+    }
+
+    .featured--info{
+        /* MINIMO PARA CELULAR É 16PX */
+        font-size: 16px;
+    }
+
+    .featured--description {
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .featured--watchbutton,
+    .featured--mylistbutton {
+        font-size: 16px;
+    }
+
+    .featured--genres {
+        font-size: 14px;
+    }
+}
