--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,10 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
+
+
+footer{
+  text-align: center;
+  margin-bottom: 60px;
+}
+
